<resources>
    <string name="app_name">Inventora</string>
    <string name="register">Register</string>
    <string name="agree_with_tos">I agree with Terms of Service</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="verification_link_sent_msg">Verification link has been sent to email:</string>
    <string name="no_internet_msg">No internet connection</string>
</resources>